# pyralog

./: ACTOR_MODEL.md  ADVANCED_FEATURES.md  ARCHITECTURE.md  ARROW.md  BATUTA.md  BRANDING.md  CAP_THEOREM.md  CHANGELOG.md  CLIENT_PARTITIONING_PATTERNS.md  CLUSTER_VS_NETWORK.md  COMPARISON.md  CONTRIBUTING.md  COPYRIGHT  CORE_CONCEPTS.md  CRYPTOGRAPHIC_VERIFICATION.md  Cargo.toml  DADBS.md  DATA_FORMATS.md  DATA_PATH.md  DESIGN.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_STATISTICS.md  DYNAMIC_PARTITIONS.md  EPOCHS.md  EXAMPLES.md  FAQ.md  FUNCTIONAL_RELATIONAL_ALGEBRA.md  GRAPHQL.md  IMMUTABLE_KNOWLEDGE_DB.md  IMPLEMENTATION_PLAN.md  JSONRPC_WEBSOCKET.md  MEMORY_ONLY_MODE.md  MPHF.md  MULTI_MODEL_DATABASE.md  NODES.md  OPERATIONS.md  PAPER.md  PERFORMANCE.md  PROJECT_SUMMARY.md  PRQL.md  (+7 more)
LICENSES/: MIT-0.txt
benches/: log_benchmark.rs
blog/: 01-introducing-pyralog.md  03-pharaoh-network.md  06-cryptographic-verification.md  07-multi-model-database.md  1-introducing-dlog.md  10-wireguard-networking.md  11-zero-copy-data-flow.md  14-deduplication.md  15-memory-only.md  16-five-interfaces.md  18-category-theory.md  2-obelisk-sequencer.md  20-lsm-arrow.md  22-zk-proofs.md  23-pow-useful.md  24-operations.md  27-analytics.md  3-distributed-coordinators.md  3-pharaoh-network.md  30-sulise.md  4-28-billion-ops.md  5-rust-infrastructure.md  6-cryptographic-verification.md  7-multi-model-database.md  8-batuta-language.md  9-actor-concurrency.md  BACKLOG.md  CHANGELOG.md  EXPANSION_PLAN.md  README.md
diagrams/: README.md  actor-topology.mmd  batuta-compilation.mmd  category-theory-schema.mmd  client-routing.mmd  component-relationships.mmd  consensus.mmd  data-flow.mmd  deduplication-layers.mmd  deployment-topologies.mmd  exactly-once.mmd  failover.mmd  hybrid-storage.mmd  lsm-storage.mmd  message-flow.mmd  multi-model-joins.mmd  obelisk-pharaoh-scarab.mmd  pphm-build.mmd  query-execution.mmd  replication.mmd  shen-ring.mmd  system-architecture.mmd  transaction-flow.mmd  two-tier-architecture.mmd  vlsn-partitioning.mmd  zero-copy-flow.mmd
pyralog-consensus/: Cargo.toml
pyralog-consensus/src/: election.rs  lib.rs  log.rs  raft.rs  rpc.rs  state.rs
pyralog-core/: Cargo.toml
pyralog-core/src/: epoch.rs  error.rs  lib.rs  log.rs  offset.rs  partition.rs  record.rs  sequencer.rs  traits.rs
pyralog-protocol/: Cargo.toml
pyralog-protocol/src/: api.rs  kafka.rs  lib.rs  partitioner.rs  request.rs  response.rs
pyralog-replication/: Cargo.toml
pyralog-replication/src/: copyset.rs  lib.rs  quorum.rs  replicator.rs  sync.rs
pyralog-storage/: Cargo.toml
pyralog-storage/src/: index.rs  lib.rs  log_storage.rs  segment.rs  tiered.rs  write_cache.rs
src/: client.rs  cluster.rs  config.rs  lib.rs  main.rs  server.rs
sulise/docs/development/planning/: plan.md
