[package]
name = "dlog"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "High-performance distributed log system inspired by Redpanda and LogDevice"
license = "MIT-0"

[workspace]
members = [".", "dlog-core", "dlog-storage", "dlog-consensus", "dlog-replication", "dlog-protocol"]

[dependencies]
dlog-core = { path = "dlog-core" }
dlog-storage = { path = "dlog-storage" }
dlog-consensus = { path = "dlog-consensus" }
dlog-replication = { path = "dlog-replication" }
dlog-protocol = { path = "dlog-protocol" }

tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
anyhow = "1.0"
thiserror = "1.0"
bytes = "1.5"
futures = "0.3"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"

[[bench]]
name = "log_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

