[package]
name = "pyralog"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "High-performance distributed log system inspired by Redpanda and LogDevice"
license = "MIT-0"

[workspace]
members = [".", "pyralog-core", "pyralog-storage", "pyralog-consensus", "pyralog-replication", "pyralog-protocol"]

[dependencies]
pyralog-core = { path = "pyralog-core" }
pyralog-storage = { path = "pyralog-storage" }
pyralog-consensus = { path = "pyralog-consensus" }
pyralog-replication = { path = "pyralog-replication" }
pyralog-protocol = { path = "pyralog-protocol" }

tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
anyhow = "1.0"
thiserror = "1.0"
bytes = "1.5"
futures = "0.3"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"

[[bench]]
name = "log_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

