[package]
name = "pyralog-replication"
version = "0.1.0"
edition = "2021"

[dependencies]
pyralog-core = { path = "../pyralog-core" }
pyralog-consensus = { path = "../pyralog-consensus" }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
bytes = "1.5"
thiserror = "1.0"
async-trait = "0.1"
parking_lot = "0.12"

