[package]
name = "pyralog-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
pyralog-core = { path = "../pyralog-core" }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
bytes = "1.5"
thiserror = "1.0"
async-trait = "0.1"
memmap2 = "0.9"
crc32fast = "1.3"
parking_lot = "0.12"
crossbeam = "0.8"

